--- a/d-registro.css
+++ b/d-registro.css
@@ -1,6 +1,6 @@
 .cabecita{
     font-weight: bolder;
-    background-color:darkblue;
+    background-color:black;
     width: 100%;
     height: 30%;
 }
@@ -8,15 +8,16 @@
 
 /*Pie de la página*/
 .pie-pag{
-    background-color:darkblue;
+    background-color: black;
     width: 100%;
     height: 30%;
     font-weight: bolder;
+    text-decoration: white;
 } 
 /*Registro*/
 form{
     border-top: 5px;
     border-right: 5px;
     border-style:double;
-    border-color: darkblue;
+    border-color: black;
 }
