--- a/c-documento.css
+++ b/c-documento.css
@@ -1,20 +1,15 @@
-.cabeza-pag{
-    background-color: darkkhaki;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-weight: bolder;
-    width: 100%;
-    height: 30%;
-} /*Cabeza de la página*/
-
-/*Pie de la página*/
-.pie-pagina{
-    background-color: darkkhaki;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-weight: bolder;
-    width: 100%;
-    height: 30%;
+.contenedor{
+    margin: 30px;
+    padding: 0;
+    background-color:azure;
+    border: 1px black solid
 }
-/*Listas de la página*/
-.listas{
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+img{
+    padding: 0;
+    margin: 30px;
+}
+
+svg{
+    padding: 1px;
+    margin-left: 20px;
 }
