--- a/d-registro.css
+++ b/d-registro.css
@@ -1,23 +1,14 @@
-.cabecita{
-    font-weight: bolder;
-    background-color:black;
-    width: 100%;
-    height: 30%;
-}
-/* Cabeza de la página*/
-
-/*Pie de la página*/
-.pie-pag{
-    background-color: black;
-    width: 100%;
-    height: 30%;
-    font-weight: bolder;
-    text-decoration: white;
-} 
-/*Registro*/
 form{
-    border-top: 5px;
-    border-right: 5px;
-    border-style:double;
-    border-color: black;
+    padding: 0;
+    margin: 30px;
+}
+
+.contenedor{
+    background-color: beige;
+    margin:30px;
+    padding: 0;
+}
+svg{
+    padding: 1px;
+    margin-left: 20px;
 }
